Latest cui-parent, OpenRewrite